[package]
name = "code-formatter"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "dedent"
harness = false

[dev-dependencies]
criterion = "0.3"
